<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="@dimen/padding_margin_03"
    tools:context="com.example.kasparasza.inventoryapp.ItemDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_name"
                style="@style/HeaderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="Name of an item shall be displayed here" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="@dimen/_1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <!-- the final dimensions of the image are set in java file of the activity-->
                <ImageView
                    android:id="@+id/item_image"
                    android:layout_width="@dimen/image_width_02"
                    android:layout_height="@dimen/image_height_02"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    tools:src="@mipmap/ic_launcher" />

                <View
                    android:layout_width="@dimen/_1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:id="@+id/item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_margin_04"
                android:layout_marginTop="@dimen/padding_margin_04"
                tools:text="Description of an item shall be displayed here" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minLines="2"
                        android:text="@string/item_details_price_header" />

                    <TextView
                        android:id="@+id/item_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        tools:text="EUR 10/kg" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minLines="2"
                        android:text="@string/item_details_quantity_header" />

                    <TextView
                        android:id="@+id/item_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        tools:text="10 kg" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">

                    <Button
                        android:id="@+id/button_add_one"
                        android:layout_width="@dimen/button_width_01"
                        android:layout_height="@dimen/button_width_01"
                        android:layout_margin="@dimen/padding_margin_03"
                        android:background="@drawable/button_shape"
                        android:text="@string/item_details_add_one_button"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button_decrease_by_one"
                        android:layout_width="@dimen/button_width_01"
                        android:layout_height="@dimen/button_width_01"
                        android:layout_below="@id/button_add_one"
                        android:layout_margin="@dimen/padding_margin_03"
                        android:background="@drawable/button_shape"
                        android:text="@string/item_details_decrease_by_one_button"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button_add_ten"
                        android:layout_width="@dimen/button_width_01"
                        android:layout_height="@dimen/button_width_01"
                        android:layout_margin="@dimen/padding_margin_03"
                        android:layout_toRightOf="@id/button_decrease_by_one"
                        android:background="@drawable/button_shape"
                        android:text="@string/item_details_add_ten_button"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button_decrease_by_ten"
                        android:layout_width="@dimen/button_width_01"
                        android:layout_height="@dimen/button_width_01"
                        android:layout_below="@id/button_add_one"
                        android:layout_margin="@dimen/padding_margin_03"
                        android:layout_toRightOf="@id/button_decrease_by_one"
                        android:background="@drawable/button_shape"
                        android:text="@string/item_details_decrease_by_ten_button"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_margin_03"
                android:text="@string/item_details_supplier_header"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/supplier_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_margin_04"
                android:layout_marginLeft="@dimen/padding_margin_03"
                android:layout_marginTop="@dimen/padding_margin_04"
                android:textColor="@color/colorBlack"
                tools:text="Name of the supplier" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/action_send_mail"
                    android:layout_width="@dimen/button_width_01"
                    android:layout_height="@dimen/button_height_01"
                    android:src="@drawable/ic_send_email" />

                <TextView
                    android:id="@+id/supplier_e_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/padding_margin_02"
                    tools:text="supplier@mail.com" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/action_call"
                    android:layout_width="@dimen/button_width_01"
                    android:layout_height="@dimen/button_height_01"
                    android:src="@drawable/ic_make_a_call" />

                <TextView
                    android:id="@+id/supplier_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/padding_margin_02"
                    tools:text="+00-111-243-555" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_01" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/button_edit_inventory_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/padding_margin_02"
        android:background="@drawable/button_shape"
        android:text="@string/item_details_edit_item_text"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

</RelativeLayout>
